After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797318 - qtmux: Correctly set tkhd width/height to the display size
qtmux: Correctly set tkhd width/height to the display size
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal blocker
: 1.14.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-10-22 11:23 UTC by Sebastian Dröge (slomo)
Modified: 2018-10-22 11:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtmux: Correctly set tkhd width/height to the display size (1.41 KB, patch)
2018-10-22 11:23 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2018-10-22 11:23:28 UTC
See commit message
Comment 1 Sebastian Dröge (slomo) 2018-10-22 11:23:33 UTC
Created attachment 373996 [details] [review]
qtmux: Correctly set tkhd width/height to the display size

It was previously set to the display aspect ratio, e.g. 4x3, 16x9, etc.
but should be set to the display size.

This is a regression from e655d47dfce1652630fe8ff5fb6be56370087004
(1.5.1) and was correct before that.
Comment 2 Sebastian Dröge (slomo) 2018-10-22 11:36:28 UTC
Attachment 373996 [details] pushed as 324f8c7 - qtmux: Correctly set tkhd width/height to the display size