qtmux: Correctly set tkhd width/height to the display size

It was previously set to the display aspect ratio, e.g. 4x3, 16x9, etc.
but should be set to the display size.

This is a regression from e655d47dfce1652630fe8ff5fb6be56370087004
(1.5.1) and was correct before that.

https://bugzilla.gnome.org/show_bug.cgi?id=797318